Fixed Dark Mode On Every Page

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -237,7 +237,8 @@
 .signup-container p {
   text-align: center;
   margin-top: 15px;
-  font-size: 14px;
+  font-size: 15px;
+  color: #000;
 }
 
 .signup-container a {
@@ -367,7 +368,8 @@
 .login-box p {
   text-align: center;
   margin-top: 15px;
-  font-size: 17px;
+  font-size: 15px;
+  color: #000;
 }
 
 .login-box p a {
@@ -498,7 +500,11 @@ body {
   transition: background 0.3s, color 0.3s;
 }
 
-body.dark {
+body.dark,
+#login_body.dark,
+#signup_body.dark,
+#cart_Page.dark,
+#checkout_body.dark {
   background: #333;
   color: #fff;
 }
@@ -544,6 +550,8 @@ body.dark .btn strong:nth-child(1) {
 body.dark .btn strong:nth-child(2) {
   display: none;
 }
+
+/* High To Low Filter CSS */
 
 .div_filter {
   margin: 0 7px;
@@ -597,4 +605,45 @@ h3 {
 #filter {
   padding: 5px 20px;
   border: 2px solid whitesmoke;
+}
+
+/* Modal background */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(var(--blur-amount));
+}
+
+/* Modal box */
+.modal-content {
+  background: #fff;
+  margin: 10% auto;
+  padding: 20px;
+  width: 90%;
+  border-radius: 10px;
+  position: relative;
+}
+
+.modalImage {
+  width: 97%;
+  height: 300px;
+  margin: auto;
+  margin-bottom: 20px;
+  display: block;
+  object-fit: cover;
+}
+
+/* Close button */
+.close {
+  position: absolute;
+  right: 13px;
+  top: 3px;
+  font-size: 30px;
+  cursor: pointer;
 }
